# podium

./: .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MEASUREMENT.md  NOTICE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  biome.json  bunfig.toml  drizzle.config.ts  e2e_tab_one.txt  install.sh  package.json  sidebar-status-board-final.html  test-hermetic-env.ts  tsconfig.json  turbo.json  vitest.acceptance.config.ts  vitest.agent-smoke.config.ts  vitest.config.ts  vitest.integration.config.ts  vitest.unit.config.ts  vitest.worktree.config.ts
.design/: POD-113-offer-tray.html  POD-131-mobile-redesign.html  POD-149-tab-scope-options.html  POD-159-chat-redesign.html  POD-98-commit-branch-visibility.html
.github/: dependabot.yml  pull_request_template.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  rust-toolchain.toml  tauri-conf.test.ts  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/autogenerated/: enable_hosting.toml
apps/desktop/src-tauri/src/: bootstrap.rs  lib.rs  main.rs  updater.rs
docs/: SPEC.md  TELEMETRY.md  adding-a-machine.md  agent-comms-target.html  agent-harness-checklist.md  agent-harness-interaction-taxonomy.md  bun-migration-readiness.md  data-and-upgrades.md  desktop-releases.md  install-on-vps-private-repo.md  migration-guide.md  mobile-web-agent-cli-challenges.md  multi-instance.md  offline-sync-architecture.md  orchestrator-mechanism-review.html  product-decisions.md  (+3 more)
(+1770 files in other folders)
