[package]
name = "podium-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "podium-desktop"
path = "src/main.rs"

[lib]
name = "podium_desktop_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
