[package]
name = "podium-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "podium-desktop"
path = "src/main.rs"

[lib]
name = "podium_desktop_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
# Native SQLite for the web client's replica persistence (POD-789):
# TanStack DB's Tauri adapter drives this plugin from JS.
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
# Required by tauri::generate_context! once plugins.updater config is embedded.
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
